Minor fixes
- Fix listening for online scp data refresh (accidentally omitted this in earlier refactoring)
- Fix searching for some escaped characters in offilne more for scp & tale lists
- Fix webview not scrolling to last position on back button
- Fix table columns being too narrow

--- a/app/src/main/assets/styles/css_style_base.css
+++ b/app/src/main/assets/styles/css_style_base.css
@@ -5,6 +5,10 @@ body {
     word-break: break-word;
 }
 
+table {
+    word-break: normal;
+}
+
 span, a {
     word-break: break-word;
 }
